更新安装postgres过程 	修改：      _posts/2013-03-24-manual-install-Cloudera-hive-CDH4.2.md 	修改：      _posts/2013-04-06-install-cloudera-cdh4.2-by-yum.md